<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/FilmCover"
                app:srcCompat="@drawable/horton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/tvApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/head"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/addTitle"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <Spinner
                    android:id="@+id/spYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/addYear"
                    android:entries="@array/Year"
                    android:minHeight="48dp"
                    android:prompt="@string/addYear"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/rbSerie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rbSerie" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbPelicula"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rbFilm" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckSciFi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckSciFi" />

            <CheckBox
                android:id="@+id/ckTerror"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckHorror" />

            <CheckBox
                android:id="@+id/ckThriller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckThriller" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckChild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckChildren" />

            <CheckBox
                android:id="@+id/ckFantasy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckFantasy" />

            <CheckBox
                android:id="@+id/ckHumour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckHumour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ckAnimation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckAnimation" />

            <CheckBox
                android:id="@+id/ckDrama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckDrama" />

            <CheckBox
                android:id="@+id/ckSpanish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckBoxClicked"
                android:text="@string/ckSpanish" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>